package fit.iuh.backend.modules.identity.domain.entity;

/**
 * Enum representing the type of address.
 */
public enum AddressType {
    SHIPPING,  // Địa chỉ giao hàng
    BILLING    // Địa chỉ thanh toán
}